# llmops

./: .gitignore  README.md  cloud.md  interview.txt  main.py  moderator.py  pyproject.toml  test_system.py  tune.md
data/: data_ingestion.py
data/dataset/: algospeak_patterns.json
deployment/: inference.py  model_deployment.py
monitoring/: drift_detection.py  model_monitoring.py
training/: model_evaluation.py  model_training.py  train_script.py
